tests/rascal/negative/type_errors/L1/19_expression_ES10_D4_32.ob
MODULE Test19;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (((+ (1 + 2)) MOD ((1 MOD y) MOD (- z))) MOD (+ ((x DIV 200) DIV (1223 DIV z))));
               q := ((((- y) # (0 + 1223)) & ((+ z) > (1 + z))) & ((- (- 200)) >= ((- x) + (x MOD 1))));
               r := (~ (~ ((200 * 1223) < (0 + z))));
               x := ((- (+ (1 DIV 2))) + (- ((200 DIV 1223) + (+ 0))));
               x := (((- (1223 * 200)) DIV ((1223 + 2) * (+ y))) * (((200 + x) - (1 MOD 1)) MOD ((200 - 1) DIV (1223 MOD 1))));
               q := (((- (1223 * 0)) * ((y MOD 1) DIV (1 MOD 2))) > ((+ (0 * 1223)) DIV ((0 * 2) + (1 * 2))));
               y := (- (((1223 MOD 200) DIV (1223 - z)) * (- (y + x))));
               x := ((((y * x) - (1223 + 1)) MOD ((z - 200) MOD (- 2))) + (((200 * z) DIV (- 1)) - ((x * 0) MOD (1 DIV x))));
  (* error *)  r := ((((- r) - (- y)) + (- (z * x))) # (((- 2) MOD (+ y)) * ((y + 200) DIV (z - z))));
               q := (((+ (z MOD y)) MOD (- (+ 1))) = (((z + x) + (200 DIV 0)) MOD ((0 + 1) + (- 1))))
END Test19.